--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "countup.js": "^2.8.0",
     "lucide-react": "^0.460.0",
+    "motion": "^11.11.17",
     "next": "15.0.3",
     "next-intl": "^3.25.1",
     "next-themes": "^0.4.3",
