--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "countup.js": "^2.8.0",
+    "lenis": "^1.1.17",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "15.0.3",
