--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "countup.js": "^2.8.0",
+    "framer-motion": "^11.11.17",
     "lenis": "^1.1.17",
     "lucide-react": "^0.460.0",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^11.11.17",
     "next": "15.0.3",
     "next-intl": "^3.25.1",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
